2012-04-19  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (Sg_MakeByteArrayOutputPort): improved performance of
	bytevector-output-port and string-output-port.

2012-03-29  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm: added x509 utility library.

2012-03-18  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (define-library): added missing feature cond-expand.

2012-03-12  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/mop/allocation.scm (sagittarius mop allocation):
	added :allocation supported metaclass.

2012-03-09  Takashi Kato  <ktakashi@ymail.com>

	* ext/crypto/crypto/key.scm (crypto): added public/private key export
	and import.

	* sitelib/asn.1/types.scm (asn.1): <der-integer> fixed invalid
	conversion when it got 0 as its value.

2012-03-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/port.scm (util): added port-fold-right.

	* src/clos.c (Sg_NoNextMethod): fixed infinite loop.

2012-03-05  Takashi Kato  <ktakashi@ymail.com>

	* src/os/win/thread.c (Sg_InternalThreadStart): fixed thread-terminate! related error on Windows.

2012-02-11  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/text/csv.scm (text csv): added csv parse library.

	* src/extlib.stub (current-directory): fixed segv.

2012-02-08  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (and-let*): added and-let* as a builtin syntax.

	* src/library.c (search_library): modified to use full path to save
	cache file.

	* src/vm.c (Sg_GetStackTrace): modified to get better stack trace.

2012-02-05  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (put-string put-byevector): fixed range check.

2012-01-16  Takashi Kato  <ktakashi@ymail.com>

	* ext/*/*_stub.c: removed extra module's generated stub files.

	* ext/regex/regex2.c (unescape_char): fixed reading \xhh.
	added \uhhhh and \Uhhhhhhhh.

	* src/null.stub (quotient remainder modulo): modified to raise an
	&assertion when divisor was 0.

2012-01-14  Takashi Kato  <ktakashi@ymail.com>
